Avoid big gaps in the list of Additional Speakers

--- a/pycon/static/css/slight.css
+++ b/pycon/static/css/slight.css
@@ -656,7 +656,7 @@ span.help-inline {
 
 /* Text-area fields that should honor line breaks. */
 
-.proposal-fields dd {
+.proposal-fields dd.significant-whitespace {
     white-space: pre-wrap;
     white-space: pre-line;
 }
